@@ -9,6 +9,8 @@ body { 		font-family: Gill Sans, Verdana, sans-serif; margin:0; }
         background: #1958b7;
 	}
 
+#dlgEditorSettings { display: none; z-index: 7; position: absolute;top: 80px;left: 50px;}
+
 #dlgNodeProperties { display: none; z-index: 2; position: absolute;top: 100px;left: 100px;}
 #dlgTextEdit { display: none; z-index: 4; position: absolute;top: 150px;left: 150px;}
 #dlgLinkProperties { display: none; z-index: 3; position: absolute; top: 80px; left: 150px; }
@@ -149,7 +151,7 @@ a.dlgTitlebar:hover {
   }
 
 .dlgProperties { 
-		width: 400px;
+		width: 600px;
 		background: #077; 
 		margin: 5px; 
 		font-size: 8pt;
